--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,16 @@ nav {
   font-weight: 500;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+  position: relative;
+  z-index: 999;
+}
+
 .header-logo {
   color: #ffa500;
   font-family: "Playfair Display", serif;
@@ -62,7 +72,24 @@ nav {
   font-weight: 700;
 }
 
-.nav-list-container {
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
+.nav-items {
   display: flex;
   align-items: center;
   gap: 1.8rem;
@@ -78,13 +105,6 @@ nav {
 }
 
 /* HEADER SECTION */
-
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.8rem;
-}
 
 .header-text-container {
   display: flex;
