--- a/css/queries.css
+++ b/css/queries.css
@@ -167,7 +167,7 @@
 /*  BELOW 544PX () */
 @media (max-width: 34em) {
   .header-text-container {
-    padding: 1.2rem 6.4rem;
+    padding: 1.2rem 3.6rem;
   }
 
   .image-header-container {
@@ -243,6 +243,8 @@
     gap: 4.4rem;
     align-items: flex-start;
   }
+
+  /* Footer */
 }
 
 /*  Fixing Safari flexbox gap */
