--- a/css/queries.css
+++ b/css/queries.css
@@ -170,6 +170,10 @@
     padding: 1.2rem 2.8rem;
   }
 
+  .heading-primary {
+    font-size: 3rem;
+  }
+
   .image-header-container {
     margin: 1rem auto;
     width: 90%;
